complite swagger
