# sso-service/internal/handlers/auth_handler/auth_handler.go
@@ -85,6 +85,13 @@ func (h *AuthHandler) Login(w http.ResponseWriter, r *http.Request) {
 	})
 }
 
+// @Summery Logout
+// @Description Выход из учётной записи
+// @Tags auth
+// @Produce json
+// @Success 200 {object} response.ApiResponse
+// @Failure 400 {object} response.ApiResponse
+// @Router /api/users/logout [post]
 func (h *AuthHandler) Logout(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
