# sso-service/internal/handlers/participant_handler/participant_handler.go
@@ -31,6 +31,14 @@ func New(participantSerivce ParticipantService) *ParticipantHandler {
 	}
 }
 
+// @Summery Get count
+// @Security BearerAuth
+// @Description Получение количества участников
+// @Tags participants
+// @Produce json
+// @Success 200 {object} response.ApiResponse{data=int}
+// @Failure 400 {object} response.ApiResponse
+// @Router /api/participants/count [get]
 func (h *ParticipantHandler) GetCount(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -49,6 +57,15 @@ func (h *ParticipantHandler) GetCount(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// @Summery Get by id
+// @Security BearerAuth
+// @Description Получение данных о ученике по id
+// @Tags participants
+// @Produce json
+// @Param id path string true "id ученика"
+// @Success 200 {object} response.ApiResponse
+// @Failure 400 {object} response.ApiResponse
+// @Router /api/participants/{id} [get]
 func (h *ParticipantHandler) GetById(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -68,6 +85,15 @@ func (h *ParticipantHandler) GetById(w http.ResponseWriter, r *http.Request) {
 	})
 }
 
+// @Summery Get by user id
+// @Security BearerAuth
+// @Description Получение данных о ученике по user id
+// @Tags participants
+// @Produce json
+// @Param id path string true "id пользователя"
+// @Success 200 {object} response.ApiResponse
+// @Failure 400 {object} response.ApiResponse
+// @Router /api/participants/byuser/{id} [get]
 func (h *ParticipantHandler) GetByUserId(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -87,6 +113,16 @@ func (h *ParticipantHandler) GetByUserId(w http.ResponseWriter, r *http.Request)
 
 }
 
+// @Summery Get all
+// @Security BearerAuth
+// @Description Получение всех учеников
+// @Tags participants
+// @Produce json
+// @Param page query int false "Номер страницы"
+// @Param limit query int false "Ограничение на количество записей"
+// @Success 200 {object} response.ApiResponse{data=[]participant_dto.ParticipantResponseDTO}
+// @Failure 400 {object} response.ApiResponse
+// @Router /api/participants [get]
 func (h *ParticipantHandler) GetAllParticipants(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -114,6 +150,17 @@ func (h *ParticipantHandler) GetAllParticipants(w http.ResponseWriter, r *http.R
 	})
 }
 
+// @Summery Update
+// @Security BearerAuth
+// @Description Обновление данных об ученике
+// @Tags participants
+// @Accept json
+// @Produce json
+// @Param credentials body participant_dto.UpdateParticipantRequestDTO true "Новые данные для обновления"
+// @Param id path string true "id пользователя"
+// @Success 200 {object} response.ApiResponse
+// @Failure 400 {object} response.ApiResponse
+// @Router /api/participants/{id} [put]
 func (h *ParticipantHandler) Update(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
